--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,7 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-
-    # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301] 
-
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
-
-    # Add .php extension if a file exists
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_URI}.php -f
-    RewriteRule ^ %{REQUEST_URI}.php [L]
+    RewriteRule ^([^\.]+)$ $1.php [NC,L]
 </IfModule> 
